--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
+    "express": "^4.16.4",
     "lodash": "^4.17.11",
     "massive": "^5.7.7",
     "morgan": "^1.9.1",
